# AGH_MLOPS_LAB_1

./: .env.dev  .env.prod  .env.test  .pre-commit-config.yaml  .sops.yaml  Dockerfile  LICENSE  README.md  app.py  docker-compose.yaml  inference.py  main.py  model.joblib  models.py  public_key.asc  pyproject.toml  secrets.yaml  settings.py  training.py
tests/: test_load_settings.py
tests/api/: test_api_response.py
