[project]
name = "agh-mlops-lab-1"
version = "0.1.0"
description = "A machine learning API using FastAPI and scikit-learn"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "scikit-learn",
    "numpy",
    "scipy",
    "joblib",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "pyyaml"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "httpx"
]
